Fix log-in div wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .Container {
   min-height: 100vh;
   width: 100vw;
+  box-sizing: border-box;
   background-color: #212121;
   color: whitesmoke;
   padding-inline: 10px;
@@ -12,7 +13,8 @@
   padding: 20px;
   display: flex;
   flex-direction: row;
-  gap: 1170px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .position-relative {
@@ -44,7 +46,12 @@ img {
   filter: invert(1) brightness(2) contrast(500%);
 }
 
-.account,
+.account {
+  display: flex;
+  white-space: nowrap;
+  align-items: center;
+}
+
 .log-in,
 .sign-up {
   border: none;
